Исправлен путь к изображению

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <img width="300" src="imgs/avatar_vk.jpeg" alt="моё фото">
+    <img width="300" src="avatar_vk.jpeg" alt="моё фото">
 
     <br>
 
