--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="keywords" content="cvv">
     <meta name="description" content="Это моё резюме">
     <title>Резюме</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
