--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <h1>Мои хобби</h1>
 
     <ul>
-        <ol>Играю на басу</ol>
+        <ol>Играю на бас гитаре</ol>
         <ol>Езжу на мотоцикле</ol>
-        <ol>Путешествую</ol>
-        <ol>люблю готовить</ol>
+        <ol>Путешествую по России</ol>
+        <ol>Виртуозно готовлю</ol>
         <ol>Снимаю видео для Youtube</ol>
     </ul>
 
