--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+     <div class="info"></div>
+          <img width="300" src="avatar_vk.jpeg" alt="моё фото">
+          <div class="info-text">
+               <br>
+               <h1>Москалёв Андрей</h1>
 
-    <img width="300" src="avatar_vk.jpeg" alt="моё фото">
+               <p>Большую часть трудового пути я посвятил изучению кулинарии. Имею разноплановый <strong>опыт</strong> работы на различных кухнях от уровня производственной столовой до фишенебельных заведений северной столицы</p>
 
-    <br>
+               <p>Паралельно считал необходимым развиваться, как <em>музыкант</em>, оставив после себя несколько десятков малоизвестных композиций в преимущественном жанре рок, и его производных. Сыграл более сотни концертов, и даже гастролировал с переменным успехом в составе группы, название которой вряд ли что-то кому-то объяснит.</p>
 
-    <a target="_blank" href="https://vk.com/id820362753?z=photo820362753_456239017%2Falbum820362753_0%2Frev">моя страничка в VK</a>
+               <p>В настоящий момент свой путь вижу в развитии, как в материальном смысле, так и в метафизическом. Улучшение материального состояния поможет мне заглянуть за рамки привычного бытового уклада, и может, найти свой островок счастья в тихом океане, кто знает :-)</p>
 
+               <a target="_blank" href="https://vk.com/id820362753?z=photo820362753_456239017%2Falbum820362753_0%2Frev">моя страничка в VK</a>
+          </div>
 
-    <h1>Москалёв Андрей</h1>
-
-    <p>Большую часть трудового пути я посвятил изучению кулинарии. Имею разноплановый <strong>опыт</strong> работы на различных кухнях от уровня производственной столовой до фишенебельных заведений северной столицы</p>
-
-    <p>Паралельно считал необходимым развиваться, как <em>музыкант</em>, оставив после себя несколько десятков малоизвестных композиций в преимущественном жанре рок, и его производных. Сыграл более сотни концертов, и даже гастролировал с переменным успехом в составе группы, название которой вряд ли что-то кому-то объяснит.</p>
-
-    <p>В настоящий момент свой путь вижу в развитии, как в материальном смысле, так и в метафизическом. Улучшение материального состояния поможет мне заглянуть за рамки привычного бытового уклада, и может, найти свой островок счастья в тихом океане, кто знает :-)</p>
-
+     </div>
 
     <h1>Мои хобби</h1>
 
