исправлен адрес ссылки на вк

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
                <p>В настоящий момент свой путь вижу в развитии, как в материальном смысле, так и в метафизическом. Улучшение материального состояния поможет мне заглянуть за рамки привычного бытового уклада, и может, найти свой островок счастья в тихом океане, кто знает :-)</p>
 
-               <a target="_blank" href="https://vk.com/id820362753?z=photo820362753_456239017%2Falbum820362753_0%2Frev">моя страничка в VK</a>
+               <a target="_blank" href="https://vk.com/id820362753">моя страничка в VK</a>
           </div>
 
      </div>
