--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 <body>
      <div class="info"></div>
           <img width="300" src="avatar_vk.jpeg" alt="моё фото">
-          <div class="info-text">
+          <div class="info-text card bg-yellow">
                <br>
                <h1>Москалёв Андрей</h1>
 
-               <p>Большую часть трудового пути я посвятил изучению кулинарии. Имею разноплановый <strong>опыт</strong> работы на различных кухнях от уровня производственной столовой до фишенебельных заведений северной столицы</p>
+               <p>Большую часть трудового пути я посвятил изучению кулинарии. Имею разноплановый <strong class="strong">опыт</strong> работы на различных кухнях от уровня производственной столовой до всемирно известных фишенебельных заведений северной столицы.</p>
 
-               <p>Паралельно считал необходимым развиваться, как <em>музыкант</em>, оставив после себя несколько десятков малоизвестных композиций в преимущественном жанре рок, и его производных. Сыграл более сотни концертов, и даже гастролировал с переменным успехом в составе группы, название которой вряд ли что-то кому-то объяснит.</p>
+               <p>Паралельно считал необходимым развиваться, как <em>музыкант</em>, оставив после себя несколько десятков малоизвестных композиций в преимущественном жанре рок, и его производных. Сыграл более сотни концертов, и даже гастролировал с переменным успехом в составе группы, название которой вряд ли кому-либо что-либо объяснит.
+              </p>
 
                <p>В настоящий момент свой путь вижу в развитии, как в материальном смысле, так и в метафизическом. Улучшение материального состояния поможет мне заглянуть за рамки привычного бытового уклада, и может, найти свой островок счастья в тихом океане, кто знает :-)</p>
 
@@ -26,85 +27,84 @@
 
      </div>
 
-    <h1>Мои хобби</h1>
+     <div class="card bg-green">
+          <h1>Мои хобби</h1>
+          <ul>
+               <ol>Играю на бас гитаре</ol>
+               <ol>Езжу на мотоцикле</ol>
+               <ol>Путешествую по России</ol>
+               <ol>Виртуозно готовлю</ol>
+               <ol>Снимаю видео для Youtube</ol>
+          </ul>
+     </div>
 
-    <ul>
-        <ol>Играю на бас гитаре</ol>
-        <ol>Езжу на мотоцикле</ol>
-        <ol>Путешествую по России</ol>
-        <ol>Виртуозно готовлю</ol>
-        <ol>Снимаю видео для Youtube</ol>
-    </ul>
+     <div class="card bg-red">
+          <table>
 
+               <thead>
+                    <tr>
+                         <th>Название работы</th>
+                         <th>Должность</th>
+                         <th>Период работы</th>
+                    </tr>
+               </thead>
+               <tbody>
+                    <tr>
+                         <td>ОТКРЫТОЕ АКЦИОНЕРНОЕ ОБЩЕСТВО СТРОЙТРЕСТ № 2</td>
+                         <td>Разнорабочий</td>
+                         <td>  01.07.2002 31.07.2002  </td>
+                    </tr>
 
+                    <tr>
+                         <td>АКЦИОНЕРНОЕ ОБЩЕСТВО "СЕВЕРОДВИНСКИЙ ХЛЕБОКОМБИНАТ"</td>
+                         <td>грузчик-комплектовщик</td>
+                         <td> 09.02.2007  29.03.2007  </td>
+                    </tr>
 
+                    <tr>
+                         <td>ип ДАНИЛОВА СВЕТЛАНА ВЛАДИМИРОВНА</td>
+                         <td>повар-пекарь</td>
+                         <td> 11.05.2007 21.08.2007  </td>
+                    </tr>
 
-    <table width="700">
+                    <tr>
+                         <td>ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ "ЦУМ-ОБЩЕПИТ"</td>
+                         <td>повар</td>
+                         <td>  24.11.2007 18.02.2008  </td>
+                    </tr>
 
-        <thead>
-            <tr>
-                <th>Название работы</th>
-                <th>Должность</th>
-                <th>Период работы</th>
-            </tr>
-        </thead>
-        <tbody>
-           <tr>
-                <td>ОТКРЫТОЕ АКЦИОНЕРНОЕ ОБЩЕСТВО СТРОЙТРЕСТ № 2</td>
-                <td>Разнорабочий</td>
-                <td>  01.07.2002 31.07.2002  </td>
-           </tr>
+                    <tr>
+                         <td>ип ДАНИЛОВА СВЕТЛАНА ВЛАДИМИРОВНА</td>
+                         <td>И.о. зав. Производством столовой</td>
+                         <td>  07.07.2010 19.07.2011 </td>
+                    </tr>
 
-           <tr>
-                <td>АКЦИОНЕРНОЕ ОБЩЕСТВО "СЕВЕРОДВИНСКИЙ ХЛЕБОКОМБИНАТ"</td>
-                <td>грузчик-комплектовщик</td>
-                <td> 09.02.2007  29.03.2007  </td>
-           </tr>
+                    <tr>
+                         <td>ип ЖЕМЧУГОВ НИКОЛАЙ ВЛАДИМИРОВИЧ</td>
+                         <td>Зав. производством кулинарии</td>
+                         <td>  07.11.2013  24.03.2014</td>
+                    </tr>
 
-           <tr>
-                <td>ип ДАНИЛОВА СВЕТЛАНА ВЛАДИМИРОВНА</td>
-                <td>повар-пекарь</td>
-                <td> 11.05.2007 21.08.2007  </td>
-           </tr>
+                    <tr>
+                         <td>ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ "КОННЕКТ"</td>
+                         <td>Водитель</td>
+                         <td>  22.12.2017 28.03.2018</td>
+                    </tr>
 
-           <tr>
-                <td>ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ "ЦУМ-ОБЩЕПИТ"</td>
-                <td>повар</td>
-                <td>  24.11.2007 18.02.2008  </td>
-           </tr>
+                    <tr>
+                         <td>ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ "КОФЕРУМ".</td>
+                         <td>Повар</td>
+                         <td>    15.06.2021 05.05.2022</td>
+                    </tr>
 
-           <tr>
-                <td>ип ДАНИЛОВА СВЕТЛАНА ВЛАДИМИРОВНА</td>
-                <td>И.о. зав. Производством столовой</td>
-                <td>  07.07.2010 19.07.2011 </td>
-           </tr>
-
-           <tr>
-                <td>ип ЖЕМЧУГОВ НИКОЛАЙ ВЛАДИМИРОВИЧ</td>
-                <td>Зав. производством кулинарии</td>
-                <td>  07.11.2013  24.03.2014</td>
-           </tr>
-
-           <tr>
-                <td>ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ "КОННЕКТ"</td>
-                <td>Водитель</td>
-                <td>  22.12.2017 28.03.2018</td>
-           </tr>
-
-           <tr>
-                <td>ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ "КОФЕРУМ".</td>
-                <td>Повар</td>
-                <td>    15.06.2021 05.05.2022</td>
-           </tr>
-
-           <tr>
-                <td>РОЗДУХОВ МАКСИМ ЕВГЕНЬЕВИЧ.</td>
-                <td>Пекарь</td>
-                <td>12.09.2022   11.10.2022 </td>
-           </tr>
-        </tbody>
-    </table>
-
+                    <tr>
+                         <td>РОЗДУХОВ МАКСИМ ЕВГЕНЬЕВИЧ.</td>
+                         <td>Пекарь</td>
+                         <td>12.09.2022   11.10.2022 </td>
+                    </tr>
+               </tbody>
+          </table>
+     </div>
 
     <h2>Связаться со мной</h2>
 
