добавлены стили для кнопок и ссылок

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
                     </p>
 
                     <p>В настоящий момент свой путь вижу в развитии, как в материальном смысле, так и в метафизическом. Улучшение материального состояния поможет мне заглянуть за рамки привычного бытового уклада, и может, найти свой островок счастья в тихом океане, кто знает :-)</p>
-                    <h4>Социальная сеть:</h4>
-                    <a target="_blank" href="https://vk.com/id820362753">моя страничка в VK</a>
+
+
+                    <h4>Я в социальной сети:</h4>
+                    <a class="link" target="_blank" href="https://vk.com/id820362753">моя страничка в VK</a>
                </div>
 
           </div>
@@ -126,7 +128,7 @@
                     <br>
                     <textarea id="message" cols="25" rows="5" placeholder="Введите сообщение"></textarea>
                </div>
-               <input type="submit" value="отправить">
+               <button class="btn" type="submit">отправить</button>
           </form>
      </div>
 </body>
