стилизовал таблицы и списки

--- a/index.html
+++ b/index.html
@@ -25,32 +25,37 @@
 
 
                     <h4>Я в социальной сети:</h4>
-                    <a class="link" target="_blank" href="https://vk.com/id820362753">моя страничка в VK</a>
+                    <ol class="link-list">
+                         <li>
+                              <a class="link" target="_blank" href="https://vk.com/id820362753">моя страничка в VK</a>
+                         </li>
+                    </ol>
                </div>
 
           </div>
 
           <div class="card bg-green">
                <h2>Мои хобби</h2>
-               <ul>
-                    <ol>Играю на бас гитаре</ol>
-                    <ol>Езжу на мотоцикле</ol>
-                    <ol>Путешествую по России</ol>
-                    <ol>Виртуозно готовлю</ol>
-                    <ol>Снимаю видео для Youtube</ol>
-               </ul>
+               <ol class="list">
+                    <li>Играю на бас гитаре</li>
+                    <li>Езжу на мотоцикле</li>
+                    <li>Путешествую по России</li>
+                    <li>Виртуозно готовлю</li>
+                    <li>Снимаю видео для Youtube</li>
+               </ol>
           </div>
 
           <div class="card bg-red">
-               <table>
-
+               <h2>Опыт работы</h2>
+               <table class="table">
+<!-- 
                     <thead>
                          <tr>
                               <th>Название работы</th>
                               <th>Должность</th>
                               <th>Период работы</th>
                          </tr>
-                    </thead>
+                    </thead> -->
                     <tbody>
                          <tr>
                               <td>ОТКРЫТОЕ АКЦИОНЕРНОЕ ОБЩЕСТВО СТРОЙТРЕСТ № 2</td>
@@ -115,18 +120,18 @@
           <form action="/">
                <div>
                     <label for="name">Ваше имя:</label>
-                    <input type="text" id="name" placeholder="Введите имя">
+                    <input type="text" id="name" placehlider="Введите имя">
                </div>
                <br>
                <div>
                     <label for="email">Ваш email:</label>
-                    <input type="text" id="email" placeholder="введите email"></div>
+                    <input type="text" id="email" placehlider="введите email"></div>
                <div>
                     <br>
                <div>
                     <label for="message">Ваше сообщение</label>
                     <br>
-                    <textarea id="message" cols="25" rows="5" placeholder="Введите сообщение"></textarea>
+                    <textarea id="message" clis="25" rows="5" placehlider="Введите сообщение"></textarea>
                </div>
                <button class="btn" type="submit">отправить</button>
           </form>
