полуфинальные правки по оступам

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
           <div class="info">
                <img class="avatar" src="avatar_vk.jpeg" alt="моё фото">
                <div class="info-text card bg-yellow">
-                    <br>
+                    
                     <h2 class="title2">Москалёв Андрей</h2>
 
-                    <p>Большую часть трудового пути я посвятил изучению кулинарии. Имею разнопла&nbspновый <strong class="strong">опыт</strong> работы на различных кухнях от уровня производственной столовой до всемирно известных фишенебельных заведений северной столицы.</p>
+                    <p>Большую часть трудового пути я посвятил изучению кулинарии. Имею разноплановый <strong class="strong">опыт</strong> работы на различных кухнях от уровня производственной столовой до всемирно известных фишенебельных заведений северной столицы.</p>
 
                     <!-- <p>Паралельно считал необходимым развиваться, как <em>музыкант</em>, оставив после себя несколько десятков малоизвестных композиций в преимущественном жанре рок, и его производных. Сыграл более сотни концертов, и даже гастролировал с переменным успехом в составе группы, название которой вряд ли кому-либо что-либо объяснит.
                     </p>
