--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </tr>
 
                     <tr>
-                         <td>ип ДАНИЛОВА СВЕТЛАНА ВЛАДИМИРОВНА</td>
+                         <td>ИП ДАНИЛОВА СВЕТЛАНА ВЛАДИМИРОВНА</td>
                          <td>повар-пекарь</td>
                          <td> 11.05.2007 21.08.2007  </td>
                     </tr>
@@ -73,26 +73,50 @@
                     </tr>
 
                     <tr>
-                         <td>ип ДАНИЛОВА СВЕТЛАНА ВЛАДИМИРОВНА</td>
+                         <td>Wasabi Северодвинск</td>
+                         <td>повар-сушист</td>
+                         <td>  18.04.2008 03.12.2010 </td>
+                    </tr>
+
+                    <tr>
+                         <td>Транзит-Строй Нарьянмар</td>
+                         <td>Промышленный альпинист</td>
+                         <td>  11.12.2010 15.06.2010 </td>
+                    </tr>
+
+                    <tr>
+                         <td>ИП ДАНИЛОВА СВЕТЛАНА ВЛАДИМИРОВНА</td>
                          <td>И.о. зав. Производством столовой</td>
                          <td>  07.07.2010 19.07.2011 </td>
                     </tr>
 
                     <tr>
-                         <td>ип ЖЕМЧУГОВ НИКОЛАЙ ВЛАДИМИРОВИЧ</td>
+                         <td>ИП ЖЕМЧУГОВ НИКОЛАЙ ВЛАДИМИРОВИЧ</td>
                          <td>Зав. производством кулинарии</td>
                          <td>  07.11.2013  24.03.2014</td>
                     </tr>
 
                     <tr>
+                         <td>ГСК "Контакт"</td>
+                         <td>Сторож</td>
+                         <td>  14.05.2014 08.03.2015</td>
+                    </tr>
+
+                    <tr>
+                         <td>OOO "Синий кит", ресторан "СоСоСо" в СПБ</td>
+                         <td>Повар ночной смены</td>
+                         <td>  13.04.2015 25.12.2015</td>
+                    </tr>
+
+                    <tr>
                          <td>ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ "КОННЕКТ"</td>
                          <td>Водитель</td>
-                         <td>  22.12.2017 28.03.2018</td>
+                         <td>  22.12.2017 28.03.2019</td>
                     </tr>
 
                     <tr>
                          <td>ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ "КОФЕРУМ".</td>
-                         <td>Повар</td>
+                         <td>Повар гриль-мангал</td>
                          <td>    15.06.2021 05.05.2022</td>
                     </tr>
 
