--- a/index.html
+++ b/index.html
@@ -17,55 +17,66 @@
           <h2>Москалёв Андрей</h2>
 
           <p>
-            Большую часть трудового пути я посвятил изучению кулинарии. Имею
-            разноплановый <strong class="strong">опыт</strong> работы на
-            различных кухнях от уровня производственной столовой до всемирно
-            известных фишенебельных заведений северной столицы.
+            Большую часть карьерного пути я развивался в сфере общественного
+            питания. Имею значительный опыт работы на различных кухнях — от
+            производственных столовых до известных ресторанов Санкт-Петербурга —
+            на позициях от линейного повара до руководителя нескольких
+            подразделений. Обладаю практикой управления коллективом более чем из
+            десяти сотрудников, хорошо ориентируюсь в организации кухонных
+            процессов, контроле качества и координации работы команды.
           </p>
-
-          <!-- <p>Паралельно считал необходимым развиваться, как <em>музыкант</em>, оставив после себя несколько десятков малоизвестных композиций в преимущественном жанре рок, и его производных. Сыграл более сотни концертов, и даже гастролировал с переменным успехом в составе группы, название которой вряд ли кому-либо что-либо объяснит.
-                    </p>
-
-                    <p>В настоящий момент свой путь вижу в развитии, как в материальном смысле, так и в метафизическом. Улучшение материального состояния поможет мне заглянуть за рамки привычного бытового уклада, и может, найти свой островок счастья в бурлящем океане жизни, кто знает :-)</p> -->
-
-          <h4>Я в социальной сети:</h4>
-          <ol class="link-list">
-            <li>
-              <a class="link" target="_blank" href="https://vk.com/id820362753"
-                >моя страничка в VK</a
-              >
-            </li>
-          </ol>
         </div>
       </div>
 
       <div class="card bg-green">
-        <h2>Мои хобби</h2>
+        <h2>Образование</h2>
         <ol class="list">
-          <li>Пишу музыку, играю на бас-гитаре и гитаре</li>
-          <li>Езжу на мотоцикле</li>
-          <li>Путешествую по России</li>
-          <li>Виртуозно готовлю</li>
-          <li>Снимаю видео для Youtube</li>
+          <li>Архангельский торгово-экономический техникум 2006</li>
+          <li>Специальность "Технология продукции общественного питания"</li>
+          <li>Дополнительно: Повар 5-го разряда</li>
+          <li>ПУ№49</li>
+          <li>Повар 4-го разряда</li>
+          <li>Кондитер 4-го разряда</li>
+        </ol>
+      </div>
+      <div class="card bg-blood">
+        <h2>Доп образование</h2>
+        <ol class="list">
+          <li>ДОСАФ 2010</li>
+          <li>Водитель кат А-B</li>
+          <li>Яндекс курсы 2022</li>
+          <li>Веб-разработчик</li>
+          <li>Result University | Университет frontend-разработки 2024</li>
+          <li>React-разработчик</li>
         </ol>
       </div>
 
       <div class="card bg-red">
         <h2>Опыт работы</h2>
         <table class="table">
-          <!-- 
-                    <thead>
-                         <tr>
-                              <th>Название работы</th>
-                              <th>Должность</th>
-                              <th>Период работы</th>
-                         </tr>
-                    </thead> -->
+          <thead>
+            <tr>
+              <th>Название работы</th>
+              <th>Должность</th>
+              <th>Период работы</th>
+            </tr>
+          </thead>
           <tbody>
             <tr>
               <td>ОТКРЫТОЕ АКЦИОНЕРНОЕ ОБЩЕСТВО СТРОЙТРЕСТ № 2</td>
               <td>Разнорабочий</td>
               <td>01.07.2002 31.07.2002</td>
+            </tr>
+            <tr>
+              <td>"Grossen Wagen" / "Цыпа"</td>
+              <td>повар-шашлычник</td>
+              <td>01.03.2004 31.08.2004</td>
+            </tr>
+
+            <tr>
+              <td>OOO "Живой взгляд" Рекламное агентство полного цикла</td>
+              <td>Директор</td>
+              <td>2005-2007</td>
             </tr>
 
             <tr>
@@ -87,15 +98,38 @@
             </tr>
 
             <tr>
+              <td>ООО "Вассаби"</td>
+              <td>повар-сушист</td>
+              <td>18.03.2008 05.06.2010</td>
+            </tr>
+
+            <tr>
               <td>ип ДАНИЛОВА СВЕТЛАНА ВЛАДИМИРОВНА</td>
-              <td>И.о. зав. Производством столовой</td>
+              <td>И.о. зав. Производством столовой ЦУМа</td>
               <td>07.07.2010 19.07.2011</td>
+            </tr>
+            <tr>
+              <td>ООО "Бонсай"</td>
+              <td>Повар горячего цеха</td>
+              <td>07.08.2011 19.10.2012</td>
             </tr>
 
             <tr>
               <td>ип ЖЕМЧУГОВ НИКОЛАЙ ВЛАДИМИРОВИЧ</td>
               <td>Зав. производством кулинарии</td>
-              <td>07.11.2013 24.03.2014</td>
+              <td>07.11.2012 24.03.2014</td>
+            </tr>
+
+            <tr>
+              <td>ООО "Синий Пушкин" Ресторан "СоСоСо" в СПБ</td>
+              <td>Ночной повар-заготовщик</td>
+              <td>25.03.2015 13.12.2016</td>
+            </tr>
+
+            <tr>
+              <td>ООО «ЕТИ» «Slurp Ramen»</td>
+              <td>Повар японской кухни</td>
+              <td>24.05.2017 07.11.2017</td>
             </tr>
 
             <tr>
@@ -105,7 +139,7 @@
             </tr>
 
             <tr>
-              <td>ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ "КОФЕРУМ".</td>
+              <td>ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ "КОФЕРУМ"</td>
               <td>Повар</td>
               <td>15.06.2021 05.05.2022</td>
             </tr>
@@ -119,7 +153,7 @@
             <tr>
               <td>ИП Климов А.В.</td>
               <td>Филеровщик</td>
-              <td>01.7.2023 по н.в.</td>
+              <td>01.07.2023 по н.в.</td>
             </tr>
           </tbody>
         </table>
